[tool.poetry]
name = "tinyadaptativerag"
version = "0.1.0"
description = "Adaptative RAG implementation example"
authors = ["Pere Pasamonte <perepc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.6"
langgraph = "^0.1.1"
chromadb = "^0.5.3"
pydotenv = "^0.0.7"
langchain-community = "^0.2.6"
langchain-groq = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
